unpackaged/main/default/objects/MaintenancePlan/fields/Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bill to Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maintenance Plans (Bill to Customer)</relationshipLabel>
    <relationshipName>Maintenance_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>