unpackaged/main/default/objects/MaintenancePlan/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Maintenance Plans</relationshipLabel>
    <relationshipName>Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>