unpackaged/main/default/objects/MaintenancePlan/fields/Desired_Arrival_Window_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Desired_Arrival_Window_End_Time__c</fullName>
    <label>Desired Arrival Window End Time</label>
    <type>Time</type>
</CustomField>