unpackaged/main/default/objects/MaintenancePlan/fields/Desired_Arrival_Window_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Desired_Arrival_Window_Start_Time__c</fullName>
    <label>Desired Arrival Window Start Time</label>
    <type>Time</type>
</CustomField>