unpackaged/main/default/objects/MaintenancePlan/fields/Desired_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Desired_Start_Time__c</fullName>
    <label>Desired Start Time</label>
    <type>DateTime</type>
</CustomField>