unpackaged/main/default/objects/MaintenancePlan/fields/Duration_Override__c.field-meta.xml
<CustomField>
    <fullName>Duration_Override__c</fullName>
    <label>Duration Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>