unpackaged/main/default/objects/MaintenancePlan/fields/Incompletion_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Reason_Code__c</fullName>
    <label>Incompletion Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client: Cancelled Work - Inside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Cancelled Work - Inside 4 hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Cancelled Work - Outside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Duplicate Work Order</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Confined Spaces</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Customer Site Not Ready</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Premise Inaccessible</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Unsafe Work Location</fullName>
            </value>
            <value>
                <fullName>Client: Non-Doable Work - Part Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>Client: Non-Doable Work - SOW Inaccuracy</fullName>
            </value>
            <value>
                <fullName>Client: Non-Doable Work - Tool Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>Client: Rescheduled Time - Inside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Rescheduled Time - Inside 4 hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Rescheduled Time - Outside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>LTS: Duplicate Work Order</fullName>
            </value>
            <value>
                <fullName>LTS: Incorrectly Built Work Order</fullName>
            </value>
            <value>
                <fullName>LTS: Non-Doable Work - Part Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>LTS: Non-Doable Work - Tool Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>LTS: Over 24 hrs - Extreme Weather</fullName>
            </value>
            <value>
                <fullName>LTS: Over 24 hrs - Unavailable Technician</fullName>
            </value>
            <value>
                <fullName>LTS: Task Sequence Not Needed</fullName>
            </value>
            <value>
                <fullName>LTS: Within 24 hrs - Emergency Ticket</fullName>
            </value>
            <value>
                <fullName>LTS: Within 24 hrs - Inclement Weather</fullName>
            </value>
            <value>
                <fullName>LTS: Within 24 hrs - Unavailable Technician</fullName>
            </value>
            <value>
                <fullName>LTS: Within 4 Hrs - Emergency Ticket</fullName>
            </value>
            <value>
                <fullName>LTS: Within 4 hrs - Inclement Weather</fullName>
            </value>
            <value>
                <fullName>LTS: Within 4 hrs - Unavailable Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>