unpackaged/main/default/objects/MaintenancePlan/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Job Type</value>
        </filterItems>
        <filterItems>
            <field>Service_Type__c.Contract_ID__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contract_ID__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Maintenance Plans (|Job Type)</relationshipLabel>
    <relationshipName>Maintenance_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>