unpackaged/main/default/objects/MaintenancePlan/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>