unpackaged/main/default/objects/MaintenancePlan/fields/Reference1__c.field-meta.xml
<CustomField>
    <fullName>Reference1__c</fullName>
    <label>Reference1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>