unpackaged/main/default/objects/MaintenancePlan/fields/Reference2__c.field-meta.xml
<CustomField>
    <fullName>Reference2__c</fullName>
    <label>Reference2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>