unpackaged/main/default/objects/MaintenancePlan/fields/Requester_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Requester_E_Mail__c</fullName>
    <label>Requester E-Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>