unpackaged/main/default/objects/MaintenancePlan/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <label>Requester Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>