unpackaged/main/default/objects/MaintenancePlan/fields/Requestor_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Requestor_E_Mail__c</fullName>
    <label>Requestor E-Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>