unpackaged/main/default/objects/MaintenancePlan/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Type</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Maintenance Plans</relationshipLabel>
    <relationshipName>Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>