unpackaged/main/default/objects/MaintenancePlan/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.Sub_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maintenance Plans (Site)</relationshipLabel>
    <relationshipName>Maintenance_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>