unpackaged/main/default/objects/MaintenancePlan/fields/State_Territory__c.field-meta.xml
<CustomField>
    <fullName>State_Territory__c</fullName>
    <label>State/Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>