unpackaged/main/default/objects/MaintenancePlan/fields/TextAttachments__c.field-meta.xml
<CustomField>
    <fullName>TextAttachments__c</fullName>
    <label>TextAttachments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>