unpackaged/main/default/objects/MaintenancePlan/validationRules/Arrival_End_Should_be_After_Arrival_Star.validationRule-meta.xml
<ValidationRule>
    <fullName>Arrival_End_Should_be_After_Arrival_Star</fullName>
    <active>false</active>
    <description>Desired Arrival End Time- should be after Desired Arrival Start Time</description>
    <errorConditionFormula>Desired_Arrival_Window_End_Time__c   &lt;Desired_Arrival_Window_Start_Time__c</errorConditionFormula>
    <errorMessage>Desired Arrival End Time should be after Desired Arrival Start Time</errorMessage>
</ValidationRule>