unpackaged/main/default/objects/MaintenancePlan/validationRules/Cancellation_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &#39;Canceled&#39;)
&amp;&amp;
Can_be_Cancelled__c = False</errorConditionFormula>
    <errorMessage>This maintenance plan can&#39;t be canceled because at least one child WO or SA is in progress</errorMessage>
</ValidationRule>