unpackaged/main/default/objects/MaintenancePlan/validationRules/Country_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(
ISBLANK(Country__c)
),
Not( REGEX( Country__c,&quot;Canada&quot;))
&amp;&amp;Not
( REGEX( Country__c,&quot;United States&quot;))
)</errorConditionFormula>
    <errorMessage>Country must be Canada or United States</errorMessage>
</ValidationRule>