unpackaged/main/default/objects/MaintenancePlan/validationRules/Must_fill_an_incompletion_reason_if_canc.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_fill_an_incompletion_reason_if_canc</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Canceled&quot;)
&amp;&amp;
ISBLANK(Incompletion_Reason__c)</errorConditionFormula>
    <errorMessage>Please fill an incompletion reason</errorMessage>
</ValidationRule>