unpackaged/main/default/objects/MaintenancePlan/validationRules/State_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(
ISBLANK(State_Territory__c )
),
OR(
NOT(LEN(State_Territory__c) = 2),
NOT(CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY&quot;&amp;
&quot;AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT&quot;, State_Territory__c )
)
)
)</errorConditionFormula>
    <errorMessage>State/Province must be in a code format.</errorMessage>
</ValidationRule>