unpackaged/main/default/objects/MaintenancePlan/validationRules/StateProv_Caps.validationRule-meta.xml
<ValidationRule>
    <fullName>StateProv_Caps</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(
ISBLANK(State_Territory__c)
),
AND(
REGEX(State_Territory__c,&quot;[A-Z]&quot;),
LEN(State_Territory__c) = 2
)
)</errorConditionFormula>
    <errorMessage>State/Prov must be in capital letters</errorMessage>
</ValidationRule>