unpackaged/main/default/objects/MaintenancePlan/listViews/All_MaintenancePlans.listView-meta.xml
<ListView>
    <fullName>All_MaintenancePlans</fullName>
    <columns>Name</columns>
    <columns>WorkOrderGenerationStatus</columns>
    <columns>Case__c</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Sub_Customer__c</columns>
    <columns>SLA__c</columns>
    <columns>Service_Type__c</columns>
    <columns>WorkType</columns>
    <columns>Reference1__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Maintenance Plans</label>
</ListView>