unpackaged/main/default/objects/MaintenancePlan/listViews/Invalid_Longitude_MP.listView-meta.xml
<ListView>
    <fullName>Invalid_Longitude_MP</fullName>
    <columns>Name</columns>
    <columns>WorkOrderGenerationStatus</columns>
    <columns>Case__c</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Sub_Customer__c</columns>
    <columns>SLA__c</columns>
    <columns>Service_Type__c</columns>
    <columns>WorkType</columns>
    <columns>Reference1__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Longitude__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Invalid Longitude MP</label>
    <sharedTo>
        <role>Admin</role>
        <role>Resource_Manager</role>
    </sharedTo>
</ListView>